--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ title: Ryan's Pages
 description: "Class of 2025"
 owner_name: John Mortensen
 github_username: Ryan378-code
-github_repo: "Ryan_2025" 
-baseurl: "/Ryan_2025"
+github_repo: "ryan1_2025" 
+baseurl: "/ryan1_2025"
 future: true
 remote_theme: jekyll/minima
 minima:
