--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Ryan's Pages 
 description: "Class of 2025"
-owner_name: John Mortensen
+owner_name: Ryan Nguyen
 github_username: Ryan378-code
 github_repo: "ryan1_2025" 
 baseurl: "/ryan1_2025"
