fixing notebooks and kernel

--- a/_config.yml
+++ b/_config.yml
@@ -27,4 +27,5 @@ header_pages:
   - navigation/tools.md
   - navigation/skittles.md
   - navigation/tropical.md
+  - _posts/Foundation/2024-9-22-python.ipynb
   
